# QtPdfReader

./: CMakeLists.txt  README.md
src/: MainApp.cpp  MainApp.h  main.cpp
